2009-04-30  Nick Clifton  <nickc@redhat.com>

	* readelf.c (dump_relocations): Display a relocation against an
	ifunc symbol as if it were a function invocation.
	(get_symbol_type): Handle STT_GNU_IFUNC.

2009-04-29  Anthony Green  <green@moxielogic.com>

	* NEWS: Tweak verilog support description.

2009-04-29  Alan Modra  <amodra@bigpond.net.au>
	    Denis Scherbakov <denis_scherbakov@yahoo.com>

	* readelf.c (slurp_ia64_unwind_table): Correct 64-bit unwind table
	read, and merge with 32-bit case.

2009-04-27  Anthony Green  <green@moxielogic.com>

	* NEWS: Mention verilog support added to bfd.

2009-04-27  H.J. Lu  <hongjiu.lu@intel.com>

	* objcopy.c (copy_object): Copy pe_opthdr before changing PE
	parameters.

2009-04-24  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (process_extended_line_op): Add DW_LNE_set_discriminator.
	Add missing newlines to HP extensions.

2009-04-17  H.J. Lu  <hongjiu.lu@intel.com>

	* objcopy.c (set_pe_subsystem): Replace efi-rom with sal-rtd.
	* doc/binutils.texi: Likewise.

2009-04-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/10074
	* objcopy.c: Include coff/i386.h and coff/pe.h.
	(pe_file_alignment): New.
	(pe_heap_commit): Likewise.
	(pe_heap_reserve): Likewise.
	(pe_image_base): Likewise.
	(pe_section_alignment): Likewise.
	(pe_stack_commit): Likewise.
	(pe_stack_reserve): Likewise.
	(pe_subsystem): Likewise.
	(pe_major_subsystem_version): Likewise.
	(pe_minor_subsystem_version): Likewise.
	(set_pe_subsystem): Likewise.
	(convert_efi_target): Likewise.
	(command_line_switch): Add OPTION_FILE_ALIGNMENT,
	OPTION_HEAP, OPTION_IMAGE_BASE, OPTION_SECTION_ALIGNMENT,
	OPTION_STACK and OPTION_SUBSYSTEM.
	(copy_options): Likewise.
	(copy_usage): Add --file-alignment, --heap, --image-base,
	--section-alignment, --stack and --subsystem.
	(copy_object): Set up PE parameters.
	(copy_main): Process Add OPTION_FILE_ALIGNMENT,
	OPTION_HEAP, OPTION_IMAGE_BASE, OPTION_SECTION_ALIGNMENT,